; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcuse/extr_cuse_lib.c_cuse_alloc_unit_number.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcuse/extr_cuse_lib.c_cuse_alloc_unit_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@f_cuse = common dso_local global i64 0, align 8
@CUSE_ERR_INVALID = common dso_local global i32 0, align 4
@CUSE_IOCTL_ALLOC_UNIT = common dso_local global i32 0, align 4
@CUSE_ERR_NO_MEMORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cuse_alloc_unit_number(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i64, i64* @f_cuse, align 8
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @CUSE_ERR_INVALID, align 4
  store i32 %8, i32* %2, align 4
  br label %19

9:                                                ; preds = %1
  %10 = load i64, i64* @f_cuse, align 8
  %11 = load i32, i32* @CUSE_IOCTL_ALLOC_UNIT, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @ioctl(i64 %10, i32 %11, i32* %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %9
  %17 = load i32, i32* @CUSE_ERR_NO_MEMORY, align 4
  store i32 %17, i32* %2, align 4
  br label %19

18:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %16, %7
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @ioctl(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
